Add CRUD for courses
